--- a/package.json
+++ b/package.json
@@ -51,6 +51,12 @@
     "tailwindcss": "^4.1.17"
   },
   "overrides": {
-    "ajv": "^8.12.0"
+    "react-scripts": {
+      "typescript": "^5.3.0"
+    },
+    "fork-ts-checker-webpack-plugin": {
+      "ajv": "^6.12.6",
+      "ajv-keywords": "^3.5.2"
+    }
   }
 }
