--- a/package.json
+++ b/package.json
@@ -50,13 +50,12 @@
     "postcss-loader": "^8.2.0",
     "tailwindcss": "^4.1.17"
   },
+  "resolutions": {
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2"
+  },
   "overrides": {
-    "react-scripts": {
-      "typescript": "^5.3.0"
-    },
-    "fork-ts-checker-webpack-plugin": {
-      "ajv": "^6.12.6",
-      "ajv-keywords": "^3.5.2"
-    }
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2"
   }
 }
