--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@
 .env.test.local
 .env.production.local
 
+# Appwrite functions (contains secrets)
+/appwrite-functions
+*.tar.gz
+
 # backup files
 *.bak
 *.old
